***Fix styling issues in CSS*** ***Refactor code for better readability and organization***

--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
 
   .toggle-label {
     position: relative;
-    display: inline-block;
+    display: block;
     width: 38px;
     height: 23px;
+    margin: auto;
   }
 
   .toggle-button {
@@ -41,24 +42,83 @@
   }
   body {
   font-family: Arial, sans-serif; /* Use a nice font */
-  color: #333; /* Dark grey color for the text */
-  font-size: 1.2em; /* Make the text a bit larger */
+  color: #e1dada; /* Dark grey color for the text */
+  font-size: 0.8em; /* Make the text a bit larger */
   font-weight: bold; /* Make the text bold */
 }
 
 .container {
-  font-size: 1.2em; /* Make the text a bit larger */
-  font-weight: bold; /* Make the text bold */
+  width: 50%; /* Width of the outside container */
+  display: flex; /* Display the elements in a row */
+  flex-direction: row; /* Display the elements in a column */
+  justify-content: space-between; /* Center the elements */
+
 }
 
 /* Style the labels */
 label {
   display: block;
   margin-top: 20px;
-  font-size: 1.1em;
 }
 
 /* Style the range inputs */
 input[type="range"] {
   width: 100%;
+}
+.slidecontainer {
+  width:50%; /* Width of the outside container */
+  margin: 0 auto; /* Center the container */
+  margin-left: 0;
+}
+
+/* The slider itself */
+.slider {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  width: 100%; /* Full-width */
+  height: 15px; /* Specified height */
+  background: #d3d3d3; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 20px; /* Set a specific slider handle width */
+  height: 15px; /* Slider handle height */
+  background: #04AA6D; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+
+.slider::-moz-range-thumb {
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #04AA6D; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+#bg {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  margin: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.menubar {
+  width: 20%;
+  position: fixed;
+  right: 0;
+  margin : 0 auto; 
+  margin-right: 0%;
 }
